--- a/src/containers/FindPersonForm.css
+++ b/src/containers/FindPersonForm.css
@@ -1,15 +1,10 @@
 .FindPersonForm{
-	background: #63474D;
 	position: relative;
 	height: 300px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
-
-.FindPersonForm-title{
-	color:#FFF;
+	/*display: flex;*/
+	/*flex-direction: column;*/
+	/*justify-content: center;*/
+	/*align-items: center;*/
 }
 
 .FindPersonForm-inputContainer{
