--- a/src/containers/PeopleDropDown.css
+++ b/src/containers/PeopleDropDown.css
@@ -1,6 +1,10 @@
 .PeopleDropDown{
+	/*display: flex;*/
+	/*flex-direction: column;*/
+	/*position: relative;*/
 	background: #F4F1DE;
-	max-width: 500px;
+	width: 100%;
 	max-height: 500px;
 	overflow-y: scroll;
+	/*box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);*/
 }
