fixed person not selecting and refactored

--- a/src/components/PeopleDropDown.css
+++ b/src/components/PeopleDropDown.css
@@ -8,3 +8,9 @@
 	overflow-y: scroll;
 	/*box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);*/
 }
+
+.PeopleDropDown--hidden{
+	position: absolute;
+	/*bottom: 99999px;
+	right:99999px;*/
+}
