--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,10 +1,13 @@
 .App{
 	background: #63474D;
+	background: #F4F1DE;
 	top: 0;
 	right: 0;
 	bottom: 0;
 	left: 0;
 	position:absolute;
 	color: #F4F1DE;
+	color: #000;
 	font-family: 'Open Sans', sans-serif;
+	overflow: hidden;
 }
