--- a/src/containers/FindPersonForm.css
+++ b/src/containers/FindPersonForm.css
@@ -1,14 +1,15 @@
 .FindPersonForm{
 	position: absolute;
-	height: 300px;
-	top: 50%;
+	/*height: 300px;*/
+	/*top: 50%;*/
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, 0%);
+	box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+	z-index: 2;
 }
 
 .FindPersonForm-inputDropDownContainer{
 	width: 500px;
-	display: inline-block;
 }
 
 .FindPersonForm-inputContainer{
@@ -26,6 +27,7 @@
 	position: relative;
 	text-indent: 8px;
 	width: 100%;
+	/*border-bottom: 1px solid #000;*/
 	/*height: 100%;*/
 	/*margin-left:8px;*/
 }
