flexbox positioning, dropdown and image styling

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,6 +1,7 @@
+/*Light Blue material theme*/
 .App{
 	background: #63474D;
-	background: #F4F1DE;
+	background: #B3E5FC;
 	top: 0;
 	right: 0;
 	bottom: 0;
