--- a/src/components/PersonImage.css
+++ b/src/components/PersonImage.css
@@ -1,9 +1,14 @@
-.Person-image{
+.PersonImage{
 	width: 45px;
+	height: 45px;
+	background-size: cover;
 	font-size: 45px;
 	margin-right: 8px;
+	border-radius: 50%;
+  background-position: center;
+	background-color: #E0E0E0;
 }
 
-.Person-icon{
-
+.PersonCard .PersonImage{
+	margin: 10px;
 }
