--- a/src/components/PeopleDropDown.css
+++ b/src/components/PeopleDropDown.css
@@ -1,16 +1,8 @@
 .PeopleDropDown{
-	/*display: flex;*/
-	/*flex-direction: column;*/
-	/*position: relative;*/
-	background: #F4F1DE;
 	width: 100%;
 	max-height: 500px;
-	overflow-y: scroll;
-	/*box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);*/
-}
-
-.PeopleDropDown--hidden{
+	overflow-y: auto;
 	position: absolute;
-	/*bottom: 99999px;
-	right:99999px;*/
+	margin-top: 8px;
+	box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
 }
