--- a/src/components/PersonCard.css
+++ b/src/components/PersonCard.css
@@ -1,40 +1,40 @@
 .PersonCard{
-  background: #FFF;
+  background: #fafafa;
   border-radius: 4px 4px 0 0;
-  position: absolute;
-  bottom: 0px;
-  left: 50%;
-  transform: translate(-50%, 0);
   color: #000;
   width: 500px;
-  height: 500px;
-  z-index: 0;
   box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12);
 }
 
 .PersonCard-slideUp-enter{
-  transform: translate(-50%, 100%);
+  transform: translate(0, 10%);
+  opacity: 0;
 }
 
 .PersonCard-slideUp-enter.PersonCard-slideUp-enter-active{
-  transform: translate(-50%, 0%);
-  transition: transform 200ms ease-out;
+  transform: translate(0, 0%);
+  transition: all 200ms ease-out;
+  opacity: 1;
 }
 
 .PersonCard-slideUp-appear{
-  transform: translate(-50%, 100%);
+  transform: translate(0, 10%);
+  opacity: 0;
 }
 
 .PersonCard-slideUp-appear.PersonCard-slideUp-appear-active{
-  transform: translate(-50%, 0%);
-  transition: transform 200ms ease-out;
+  transform: translate(0, 0%);
+  transition: all 200ms ease-out;
+  opacity: 1;
 }
 
 .PersonCard-slideUp-leave{
-  transform: translate(-50%, 0%);
+  transform: translate(0, 0%);
+  opacity: 1;
 }
 
 .PersonCard-slideUp-leave.PersonCard-slideUp-leave-active{
-  transform: translate(-50%, 100%);
-  transition: transform 200ms ease-out;
+  transform: translate(0, 10%);
+  transition: all 200ms ease-out;
+  opacity: 0;
 }
