send in prop to determine image size

--- a/src/components/PersonCard.css
+++ b/src/components/PersonCard.css
@@ -1,3 +1,4 @@
+/*https://s-media-cache-ak0.pinimg.com/736x/33/67/53/33675303438f8334e333c63441ba9732.jpg*/
 .PersonCard{
   background: #fafafa;
   border-radius: 4px 4px 0 0;
